fix(toggle): auto adapt slot container when content is too long

--- a/packages/components/src/toggle/src/components/osds-toggle/osds-toggle.scss
+++ b/packages/components/src/toggle/src/components/osds-toggle/osds-toggle.scss
@@ -56,7 +56,7 @@
 
 slot {
   display: inline-flex;
-  flex: 1;
+  flex: 1 1 auto;
 }
 
 :host([checking]) {
